--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 	</main>
 
 	<footer>
-		<p>&copy; San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; Ashley Singh, 2025</p>
 	</footer>
 </body>
 </html>
+
